@@ -7,6 +7,11 @@ Changes in version 0.1.2.5-xxxx - 200?-??-??
     - Enable write limiting as well as read limiting. Now we sacrifice
       capacity if we're pushing out lots of directory traffic, rather
       than overrunning the user's intended bandwidth limits.
+    - Authorities now include server versions in networkstatus. This adds
+      about 2% to the side of compressed networkstatus docs, and allows
+      clients to tell which servers support BEGIN_DIR and which don't.
+      The implementation is forward-compatible with a proposed future
+      protocol version scheme not tied to Tor versions.
 
   o Minor features:
     - Start using the state file to store bandwidth accounting data:
